--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "lint": "eslint --config=.eslintrc src/**",
+    "test": "mocha --require react-native-mock/mock.js --compilers js:scripts/test/compile.js --recursive src/**/*.spec.js",
+    "test:watch": "npm run test -- --watch",
     "debug:ios": "node node_modules/react-native/local-cli/cli.js run-ios",
     "debug:android": "adb reverse tcp:8081 tcp:8081 && node_modules/react-native/local-cli/cli.js run-android"
   },
@@ -15,12 +17,20 @@
     "redux": "3.5.2"
   },
   "devDependencies": {
+    "babel-core": "^6.9.1",
     "babel-eslint": "6.0.4",
+    "chai": "^3.5.0",
     "eslint": "2.11.1",
     "eslint-config-airbnb": "9.0.1",
     "eslint-plugin-import": "1.8.1",
     "eslint-plugin-jsx-a11y": "1.2.3",
     "eslint-plugin-react": "5.1.1",
-    "eslint-plugin-react-native": "1.1.0-beta"
+    "eslint-plugin-react-native": "^1.0.2",
+    "fs": "0.0.2",
+    "mocha": "^2.5.3",
+    "path": "^0.12.7",
+    "react": "^15.0.2",
+    "react-native": "^0.26.3",
+    "react-native-mock": "^0.2.2"
   }
 }
