--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "postinstall": "sh ./scripts/post-install.sh",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "lint": "eslint --config=.eslintrc src/**",
     "test": "mocha --require react-native-mock/mock.js --compilers js:scripts/test/compile.js --recursive src/**/*.spec.js",
@@ -11,8 +12,8 @@
     "debug:android": "adb reverse tcp:8081 tcp:8081 && node_modules/react-native/local-cli/cli.js run-android"
   },
   "dependencies": {
-    "react": "15.1.0",
-    "react-native": "0.26.3",
+    "react": "^15.1.0",
+    "react-native": "^0.27.0",
     "react-redux": "4.4.5",
     "redux": "3.5.2"
   },
@@ -29,8 +30,6 @@
     "fs": "0.0.2",
     "mocha": "^2.5.3",
     "path": "^0.12.7",
-    "react": "^15.0.2",
-    "react-native": "^0.26.3",
     "react-native-mock": "^0.2.2"
   }
 }
