--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "eslint-plugin-jsx-a11y": "1.5.3",
     "eslint-plugin-react": "5.2.2",
     "eslint-plugin-react-native": "^1.1.0",
+    "flow-bin": "^0.27.0",
     "fs": "0.0.2",
     "mocha": "^2.5.3",
     "path": "^0.12.7",
-    "react-native-mock": "^0.2.3",
-    "react-native-debugger-open": "^0.2.3"
+    "react-native-debugger-open": "^0.2.3",
+    "react-native-mock": "^0.2.3"
   }
 }
