--- a/ios/OnsiteHire.xcodeproj/xcshareddata/xcschemes/CharityTinder.xcscheme
+++ b/ios/OnsiteHire.xcodeproj/xcshareddata/xcschemes/CharityTinder.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "CharityTinder.app"
-               BlueprintName = "CharityTinder"
-               ReferencedContainer = "container:CharityTinder.xcodeproj">
+               BuildableName = "OnsiteHire.app"
+               BlueprintName = "OnsiteHire"
+               ReferencedContainer = "container:OnsiteHire.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "CharityTinderTests.xctest"
-               BlueprintName = "CharityTinderTests"
-               ReferencedContainer = "container:CharityTinder.xcodeproj">
+               BuildableName = "OnsiteHireTests.xctest"
+               BlueprintName = "OnsiteHireTests"
+               ReferencedContainer = "container:OnsiteHire.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,9 +47,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "CharityTinderTests.xctest"
-               BlueprintName = "CharityTinderTests"
-               ReferencedContainer = "container:CharityTinder.xcodeproj">
+               BuildableName = "OnsiteHireTests.xctest"
+               BlueprintName = "OnsiteHireTests"
+               ReferencedContainer = "container:OnsiteHire.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -57,9 +57,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "CharityTinder.app"
-            BlueprintName = "CharityTinder"
-            ReferencedContainer = "container:CharityTinder.xcodeproj">
+            BuildableName = "OnsiteHire.app"
+            BlueprintName = "OnsiteHire"
+            ReferencedContainer = "container:OnsiteHire.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -77,9 +77,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "CharityTinder.app"
-            BlueprintName = "CharityTinder"
-            ReferencedContainer = "container:CharityTinder.xcodeproj">
+            BuildableName = "OnsiteHire.app"
+            BlueprintName = "OnsiteHire"
+            ReferencedContainer = "container:OnsiteHire.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -96,9 +96,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "CharityTinder.app"
-            BlueprintName = "CharityTinder"
-            ReferencedContainer = "container:CharityTinder.xcodeproj">
+            BuildableName = "OnsiteHire.app"
+            BlueprintName = "OnsiteHire"
+            ReferencedContainer = "container:OnsiteHire.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
