--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "test": "mocha --require react-native-mock/mock.js --compilers js:scripts/test/compile.js --recursive src/**/*.spec.js",
     "test:watch": "npm run test -- --watch",
     "debug:ios": "node node_modules/react-native/local-cli/cli.js run-ios",
+    "debug:ios:6+": "npm run debug:ios -- --simulator=\"iPhone 6 Plus\"",
+    "debug:ios:6s": "npm run debug:ios -- --simulator=\"iPhone 6s\"",
+    "debug:ios:6": "npm run debug:ios -- --simulator=\"iPhone 6\"",
+    "debug:ios:5": "npm run debug:ios -- --simulator=\"iPhone 5\"",
+    "debug:ios:ipad2": "npm run debug:ios -- --simulator=\"iPad 2\"",
+    "debug:ios": "node node_modules/react-native/local-cli/cli.js run-ios",
+    "debug:ios": "node node_modules/react-native/local-cli/cli.js run-ios",
     "debug:android": "adb reverse tcp:8081 tcp:8081 && node_modules/react-native/local-cli/cli.js run-android"
   },
   "dependencies": {
