--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "ava": {
     "babel": "inherit",
-    "files": ["tests/**/*.js", "!tests/_Setup.js"],
+    "files": [
+      "tests/**/*.js",
+      "!tests/_Setup.js"
+    ],
     "require": [
       "babel-register",
       "babel-polyfill",
@@ -34,8 +37,10 @@
     "redux": "3.5.2"
   },
   "devDependencies": {
+    "ava": "^0.15.2",
     "babel-core": "^6.10.4",
     "babel-eslint": "6.1.2",
+    "enzyme": "^2.4.1",
     "eslint": "3.1.0",
     "eslint-config-airbnb": "9.0.1",
     "eslint-plugin-import": "1.10.2",
@@ -44,7 +49,11 @@
     "eslint-plugin-react-native": "^1.1.0",
     "flow-bin": "^0.29.0",
     "fs": "0.0.2",
+    "mockery": "^1.7.0",
+    "nyc": "^7.0.0",
     "path": "^0.12.7",
+    "react-addons-test-utils": "^15.2.1",
+    "react-dom": "^15.2.1",
     "react-native-debugger-open": "^0.3.0",
     "react-native-mock": "^0.2.4"
   }
