--- a/package.json
+++ b/package.json
@@ -32,18 +32,18 @@
   },
   "dependencies": {
     "react": "^15.2.1",
-    "react-native": "^0.29.1",
+    "react-native": "^0.30.0",
     "react-redux": "4.4.5",
     "redux": "3.5.2"
   },
   "devDependencies": {
     "ava": "^0.15.2",
-    "babel-core": "^6.10.4",
+    "babel-core": "^6.11.4",
     "babel-eslint": "6.1.2",
     "enzyme": "^2.4.1",
-    "eslint": "3.1.0",
+    "eslint": "^3.1.1",
     "eslint-config-airbnb": "9.0.1",
-    "eslint-plugin-import": "1.10.2",
+    "eslint-plugin-import": "^1.11.1",
     "eslint-plugin-jsx-a11y": "2.0.1",
     "eslint-plugin-react": "5.2.2",
     "eslint-plugin-react-native": "^1.1.0",
@@ -55,6 +55,6 @@
     "react-addons-test-utils": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-native-debugger-open": "^0.3.0",
-    "react-native-mock": "^0.2.4"
+    "react-native-mock": "^0.2.5"
   }
 }
