--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     ]
   },
   "dependencies": {
+    "ava": "^0.16.0",
     "react": "^15.3.0",
-    "react-native": "^0.31.0",
+    "react-native": "^0.33.0",
     "react-redux": "4.4.5",
-    "redux": "3.5.2"
+    "redux": "^3.6.0",
+    "standard": "^8.0.0"
   },
   "devDependencies": {
     "ava": "^0.15.2",
